bugfix: booking module was now deployed cause ORM do not suppport Number as datatype istead of I used number
